--- a/githubwebsite/githubwebsite/app.css
+++ b/githubwebsite/githubwebsite/app.css
@@ -1,7 +1,45 @@
 ﻿body {
     font-family: 'Segoe UI', sans-serif;
+	background: #F0F0F0;
 }
 
 span {
     font-style: italic;
+}
+
+nav {
+    display: block;
+	position: absolute;
+	left: 0;
+	width: 100%;
+	background: url("images/nav_background.png");
+}
+
+nav ul {
+    margin: 0 auto;
+    width: 500px;
+    list-style: none;
+}
+
+nav ul li {
+    float: left;
+}
+
+nav ul li a {
+    display: block;
+    margin-right: 20px;
+    width: 100px;
+    font-size: 14px;
+    line-height: 44px;
+    text-align: center;
+    text-decoration: none;
+    color: #777;
+}
+
+nav ul li a:hover {
+    color: #fff;
+}
+			
+nav ul li.selected a {
+    color: #fff;
 }
