--- a/app.css
+++ b/app.css
@@ -1,6 +1,12 @@
-﻿body {
+﻿/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
     font-family: 'Segoe UI', sans-serif;
-	background: #F0F0F0;
+    background: #F0F0F0;
 }
 
 span {
@@ -8,38 +14,98 @@ span {
 }
 
 nav {
-    display: block;
-	position: absolute;
-	left: 0;
-	width: 100%;
-	background: url("images/nav_background.png");
+    position: absolute;
+    left: 0;
+    width: 100%;
+    background: url("images/nav_background.png");
 }
 
-nav ul {
-    margin: 0 auto;
-    width: 500px;
-    list-style: none;
+    nav ul {
+        margin: 0 auto;
+        width: 500px;
+        list-style: none;
+    }
+
+        nav ul li {
+            float: left;
+        }
+
+            nav ul li a {
+                display: block;
+                margin-right: 20px;
+                width: 100px;
+                font-size: 14px;
+                line-height: 44px;
+                text-align: center;
+                text-decoration: none;
+                color: #777;
+            }
+
+                nav ul li a:hover {
+                    color: #fff;
+                }
+
+            nav ul li.selected a {
+                color: #fff;
+            }
+
+/* modifications below to attempt to make it better for mobile devices */
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    nav ul li a {
+        font-size: 28px;
+    }
 }
 
-nav ul li {
-    float: left;
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) {
+    nav ul li a {
+        font-size: 28px;
+    }
 }
 
-nav ul li a {
-    display: block;
-    margin-right: 20px;
-    width: 100px;
-    font-size: 14px;
-    line-height: 44px;
-    text-align: center;
-    text-decoration: none;
-    color: #777;
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+    nav ul li a {
+        font-size: 28px;
+    }
 }
 
-nav ul li a:hover {
-    color: #fff;
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    nav ul li a {
+        font-size: 28px;
+    }
 }
-			
-nav ul li.selected a {
-    color: #fff;
+
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+    nav ul li a {
+        font-size: 28px;
+    }
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+    nav ul li a {
+        font-size: 28px;
+    }
+}
+
+/* Desktops and laptops ----------- */
+@media only screen and (min-width : 1224px) {
+    /* Styles */
+}
+
+/* Large screens ----------- */
+@media only screen and (min-width : 1824px) {
+    /* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
+    nav ul li a {
+        font-size: 28px;
+    }
 }
