--- a/app.css
+++ b/app.css
@@ -53,44 +53,46 @@ nav {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    nav ul li a {
-        font-size: 28px;
+    nav ul {
+        width: 800px;
     }
+
+        nav ul li a {
+            width: 200px;
+            font-size: 32px;
+        }
 }
 
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 321px) {
-    nav ul li a {
-        font-size: 28px;
-    }
+    /* Styles */
 }
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
-    nav ul li a {
-        font-size: 28px;
+    nav ul {
+        width: 800px;
     }
+
+        nav ul li a {
+            width: 200px;
+            font-size: 32px;
+        }
 }
 
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-    nav ul li a {
-        font-size: 28px;
-    }
+    /* Styles */
 }
 
 /* iPads (landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-    nav ul li a {
-        font-size: 28px;
-    }
+    /* Styles */
 }
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-    nav ul li a {
-        font-size: 28px;
-    }
+    /* Styles */
 }
 
 /* Desktops and laptops ----------- */
@@ -105,7 +107,12 @@ nav {
 
 /* iPhone 4 ----------- */
 @media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
-    nav ul li a {
-        font-size: 28px;
+    nav ul {
+        width: 800px;
     }
+
+        nav ul li a {
+            width: 200px;
+            font-size: 32px;
+        }
 }
