--- a/app.css
+++ b/app.css
@@ -7,6 +7,8 @@ footer, header, hgroup, menu, nav, section {
 body {
     font-family: 'Segoe UI', sans-serif;
     background: #F0F0F0;
+    width: 1000px;
+    margin: 0 auto;
 }
 
 span {
