--- a/githubwebsite/githubwebsite/app.css
+++ b/githubwebsite/githubwebsite/app.css
@@ -184,7 +184,16 @@ ul.calendar {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    /* Styles*/
+    body {
+    width: 100%;
+}
+div.left-side-list {
+    position: static;
+}
+
+div.right-side-list {
+    position: static;
+}
 }
 
 /* Smartphones (landscape) ----------- */
@@ -194,7 +203,16 @@ ul.calendar {
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
-    /* Styles */
+    body {
+    width: 100%;
+}
+div.left-side-list {
+    position: static;
+}
+
+div.right-side-list {
+    position: static;
+}
 }
 
 /* iPads (portrait and landscape) ----------- */
@@ -224,5 +242,14 @@ ul.calendar {
 
 /* iPhone 4 ----------- */
 @media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
-    /* Styles */
+    body {
+    width: 100%;
+}
+div.left-side-list {
+    position: static;
+}
+
+div.right-side-list {
+    position: static;
+}
 }
